--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
 	<main>
+		<h1 class="sr-only">Testimonials</h1>
 		<section class="carousel" role="group" aria-roledescription="carousel" aria-label="Student testimonials">
 			<div class="testimonials">
 				<div id="testimonial1" class="testimonial" role="group" aria-roledescription="slide" aria-hidden="false" aria-labelledby="testimonial-person1">
