Change paragraph elements to spans in cite

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 						</p>
 						<footer>
 							<cite class="testimonial-cite">
-								<p id="testimonial-person1" class="testimonial-person">Tanya Sinclair</p>
-								<p class="testimonial-type">UX Engineer</p>
+								<span id="testimonial-person1" class="testimonial-person">Tanya Sinclair</span> 
+								<span class="testimonial-type">UX Engineer</span>
 							</cite>
 						</footer>
 					</blockquote>
@@ -49,8 +49,8 @@
 						</p>
 						<footer>
 							<cite class="testimonial-cite">
-								<p id="testimonial-person2" class="testimonial-person">John Tarkpor</p>
-								<p class="testimonial-type">Junior Front-end Developer</p>
+								<span id="testimonial-person2" class="testimonial-person">John Tarkpor</span> 
+								<span class="testimonial-type">Junior Front-end Developer</span>
 							</cite>
 						</footer>
 					</blockquote>
