Change carousel name to slider

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 	<main>
 		<h1 class="sr-only">Testimonials</h1>
-		<section class="carousel" aria-roledescription="carousel" aria-label="Student testimonials">
+		<section class="slider" aria-roledescription="slider" aria-label="Student testimonials">
 			<div class="testimonials">
 				<div id="testimonial1" class="testimonial" role="group" aria-roledescription="slide" aria-hidden="false" aria-labelledby="testimonial-person1">
 					<div class="testimonial-picture-container">
